--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -48,6 +48,16 @@
   font-style: normal;
 }
 
+.roboto-flex {
+  font-family: "Roboto Flex", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 900;
+  font-style: normal;
+  font-variation-settings: "slnt" -10, "wdth" 100, "GRAD" 0, "XOPQ" 96,
+    "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514,
+    "YTUC" 712;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
