--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -74,14 +74,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
 }
 
 @media (max-width: 640px) {
   body {
-    height: auto; /* Adjust or set height as needed for small screens */
-    min-height: 100vh; /* Ensures body takes at least full viewport height */
-    overflow: visible;
+    height: auto;
   }
 }
 
@@ -89,4 +86,8 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.loading {
+  overflow: hidden;
 }
