--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -68,17 +68,24 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  width: 100%;
+  /* width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
+
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  min-height: 100vh; /* Ensure it works for tall content */
+  box-sizing: border-box;
 }
 
 @media (max-width: 640px) {
   body {
-    height: auto;
+    /* height: 100%; */
   }
 }
 
