--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -83,18 +83,18 @@ body {
   box-sizing: border-box;
 }
 
-@media (max-width: 640px) {
+/* @media (max-width: 640px) {
   body {
-    /* height: 100%; */
+    height: 100%;
   }
-}
+} */
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
-
+/* 
 .loading {
   overflow: hidden;
-}
+} */
