- Projects page individual project modal created - also mobile ready.

--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -65,6 +65,20 @@
     "YTUC" 712;
 }
 
+.jetbrains-mono-medium {
+  font-family: "JetBrains Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.jetbrains-mono-extrabold {
+  font-family: "JetBrains Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
@@ -167,4 +181,33 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background-color: white;
+  border: none;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: #c7cccc;
+}
+
+.hidden-scrollbar::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+  display: none;
+}
+
+.modal-open {
+  display: block;
+}
+.modal-close {
+  display: hidden;
 }
