--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -64,8 +64,17 @@
   font-optical-sizing: auto;
   font-weight: 900;
   font-style: normal;
-  font-variation-settings: "slnt" -10, "wdth" 100, "GRAD" 0, "XOPQ" 96,
-    "XTRA" 468, "YOPQ" 79, "YTAS" 750, "YTDE" -203, "YTFI" 738, "YTLC" 514,
+  font-variation-settings:
+    "slnt" -10,
+    "wdth" 100,
+    "GRAD" 0,
+    "XOPQ" 96,
+    "XTRA" 468,
+    "YOPQ" 79,
+    "YTAS" 750,
+    "YTDE" -203,
+    "YTFI" 738,
+    "YTLC" 514,
     "YTUC" 712;
 }
 
